Slide a servicios Eventos terminado

--- a/source/mainPage.html
+++ b/source/mainPage.html
@@ -21,7 +21,6 @@
                 </div>
             </div>
 
-
         <div class="slide" id="sumSlider">
 
             <div class="jumbotron" id="sum">
@@ -45,22 +44,30 @@
                             </div>
 
                             <div class="habitacionesImagenes">
-                                <img class="active-image image" id="autorioSantaMariaImagen" src="http://hotelcolonjunin.com.ar/standard.jpg">
-                                <img class="image" id="salaLaNinaImagen" src="http://hotelcolonjunin.com.ar/suite.jpg">
-                                <img class="image" id="salaLaPintaImagen" src="http://imagizer.imageshack.us/a/img540/7792/t4MxZs.jpg">
+                                <img class="active-image image" id="autorioSantaMariaImagen" src="http://imagizer.imageshack.us/a/img909/2117/rdWbNG.jpg">
+                                <img class="image" id="salaLaNinaImagen" src="http://imagizer.imageshack.us/a/img905/6494/gYfXZq.jpg">
+                                <img class="image" id="salaLaPintaImagen" src="http://imagizer.imageshack.us/a/img909/8306/TDOJDi.jpg">
                             </div>
 
                             <div class="habitacionesDescripcion">
-                                <p id="descripcionDeSum">
+                                <pre>
+El hotel cuenta con tres salas de reuniones diseñadas para suplir sus necesidades de espacio para distintos eventos
 
-                                </p>
+Las salas cuentan con:
+
+- Proyector digital
+- Notebook
+- Rotafolio
+- Internet WiFi
+- Aire acondicionado frio/calor
+                                </pre>
+
                             </div>
                     </div>
                 </div>
 
             </div>
         </div>
-
 
         <div class="slide" id="contactoSlider">
 
@@ -74,14 +81,12 @@
             </div>
         </div>
 
-
         <div class="slide" id="habitacionesSlider">
-        <div class="jumbotron" id="habitaciones">
+            <div class="jumbotron" id="habitaciones">
             <div class="container">
                 <div class="contenidoHabitaciones">
                     <div class="habitacionesMenu">
                         <ul>
-
                             <li>
                                 <a id="standardLink" href="#">Standard</a>
                             </li>
@@ -97,7 +102,6 @@
                             <li class="last">
                                 <a id="dobleLink" href="#">Doble</a>
                             </li>
-
                         </ul>
 
                     </div>
@@ -110,30 +114,52 @@
                     </div>
 
                     <div class="habitacionesDescripcion">
-                        <p id="descripcionDeHabitacion">
-                            La habitacion standard cuenta con:
-                            - Saraza1
-                            - Saraza2
-                            - Saraza3
-                            - Saraza4
-                        </p>
+                        <pre>
+Las habitaciones poseen:
+
+- TV
+- Internet
+- Baño en suite
+- Room service
+- Aire acondicionado frio/calor
+                        </pre>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-
+        </div>
 
         <div class="slide" id="serviciosSlider">
             <div class="jumbotron" id="servicios">
                 <div class="container">
                     <div class="contenidoServicios">
 
+
+                            <div class="serviciosDescripcion">
+                                <pre>
+Ademas el hotel ofrece los siguientes servicios:
+
+- Piscina
+- Bar las 24 hs
+- Quincho con parrilla
+- Gym
+- Box privado de internet
+                                </pre>
+                            </div>
+
+                            <div class="serviciosImagenes">
+                                <img class="servicio-active-image servicio-image" id="barImagen" src="http://imagizer.imageshack.us/a/img537/1292/mVpwKT.jpg">
+                                <img class="servicio-image" id="piletaImagen" src="http://imagizer.imageshack.us/a/img538/1959/Z1atXZ.jpg">
+                                <img class="servicio-image" id="quinchoImagen" src="http://imagizer.imageshack.us/a/img908/3221/O30XtW.jpg">
+                                <img class="servicio-image" id="quincho2Imagen" src="http://imagizer.imageshack.us/a/img540/8103/TRUJcD.jpg">
+                                <img class="servicio-image" id="gymImagen" src="http://imagizer.imageshack.us/a/img538/9018/Thpbkh.jpg">
+                            </div>
+
+
                     </div>
                 </div>
             </div>
         </div>
-
 
         <div class="slide" id="clientesSlider">
             <div class="jumbotron" id="clientes">
@@ -144,7 +170,6 @@
                 </div>
             </div>
         </div>
-
 
         <div class="slide" id="ubicacionSlider">
             <div class="jumbotron" id="ubicacion">
