--- a/source/mainPage.html
+++ b/source/mainPage.html
@@ -50,17 +50,17 @@
                             </div>
 
                             <div class="habitacionesDescripcion">
-                                <pre>
-El hotel cuenta con tres salas de reuniones diseñadas para suplir sus necesidades de espacio para distintos eventos
-
-Las salas cuentan con:
-
-- Proyector digital
-- Notebook
-- Rotafolio
-- Internet WiFi
+                                <p>
+El hotel cuenta con tres salas de reuniones diseñadas para suplir sus necesidades de espacio para distintos eventos<br/>
+<br/>
+Las salas cuentan con:<br/>
+<br/>
+- Proyector digital<br/>
+- Notebook<br/>
+- Rotafolio<br/>
+- Internet WiFi<br/>
 - Aire acondicionado frio/calor
-                                </pre>
+                                </p>
 
                             </div>
                     </div>
@@ -114,15 +114,15 @@ Las salas cuentan con:
                     </div>
 
                     <div class="habitacionesDescripcion">
-                        <pre>
-Las habitaciones poseen:
-
-- TV
-- Internet
-- Baño en suite
-- Room service
+                        <p>
+Las habitaciones poseen:<br/>
+<br/>
+- TV<br/>
+- Internet<br/>
+- Baño en suite<br/>
+- Room service<br/>
 - Aire acondicionado frio/calor
-                        </pre>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -136,15 +136,15 @@ Las habitaciones poseen:
 
 
                             <div class="serviciosDescripcion">
-                                <pre>
-Ademas el hotel ofrece los siguientes servicios:
-
-- Piscina
-- Bar las 24 hs
-- Quincho con parrilla
-- Gym
-- Box privado de internet
-                                </pre>
+                                <p>
+Ademas el hotel ofrece los siguientes servicios:<br/>
+<br/>
+- Piscina<br/>
+- Bar las 24 hs<br/>
+- Quincho con parrilla<br/>
+- Gym<br/>
+- Box privado de internet<br/>
+                                </p>
                             </div>
 
                             <div class="serviciosImagenes">
