Sitio finalizado: Home; Modulo habitaciones; Modulo servicios; Modulo clientes (falta llenar clientes); Modulo ubicacion; Modulo contacto (falta agregar php para el envio del email); Modulo eventos;

--- a/source/mainPage.html
+++ b/source/mainPage.html
@@ -165,7 +165,37 @@ Ademas el hotel ofrece los siguientes servicios:<br/>
             <div class="jumbotron" id="clientes">
                 <div class="container">
                     <div class="contenidoClientes">
-
+                        <p>Ellos ya confiaron en nosotros:<br/>
+                            <br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        - Pepito<br/>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -213,8 +243,6 @@ Ademas el hotel ofrece los siguientes servicios:<br/>
 </div>
 
 <div class="footer">Hotel colon junin / Colon 144, Junin / Buenos aires, argentina //// Telefonos: (0236) 442-2033 | 442-1738 | 442-1597
-
-</div>
 
 </div>
 
