Agregando cambio de imagenes en servicios manualmente

--- a/source/index.html
+++ b/source/index.html
@@ -155,6 +155,19 @@ Ademas el hotel ofrece los siguientes servicios:<br/>
                                 <img class="servicio-image" id="gymImagen" src="http://imagizer.imageshack.us/a/img538/9018/Thpbkh.jpg">
                             </div>
 
+                            <div class="slider-nav">
+                                <a href="#" class="arrow-prev"><img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/arrow-prev.png"></a>
+
+                                <ul class="slider-dots">
+                                    <li class="dot active-dot">&bull;</li>
+                                    <li class="dot">&bull;</li>
+                                    <li class="dot">&bull;</li>
+                                    <li class="dot">&bull;</li>
+                                    <li class="dot">&bull;</li>
+                                </ul>
+
+                                <a href="#" class="arrow-next"><img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/arrow-next.png"></a>
+                            </div>
 
                     </div>
                 </div>
