--- a/source/index.html
+++ b/source/index.html
@@ -180,34 +180,64 @@ Ademas el hotel ofrece los siguientes servicios:<br/>
                     <div class="contenidoClientes">
                         <p>Ellos ya confiaron en nosotros:<br/>
                             <br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
-                        - Pepito<br/>
+                        - NIDERA<br/>
+                        - MONSANTO<br/>
+                        - CARGILL<br/>
+                        - DUPONT<br/>
+                        - ASP<br/>
+                        - LABORATORIO TEMIS LOSTALO<br/>
+                        - LABORATORIO ROEMMERS<br/>
+                        - FINADIET<br/>
+                        - PFIZER<br/>
+                        - MERCK SHARP AND DOHME<br/>
+                        - LABORATORIO POEN<br/>
+                        - NALDO LOMBARDI<br/>
+                        - GARBARINO<br/>
+                        - BRINGERI<br/>
+                        - MOLINOS TASSARA<br/>
+                        - MOLINOS RIO DE LA PLATA<br/>
+                        - TELECOM<br/>
+                        - OSDE<br/>
+                        - BANCO GALICIA<br/>
+                        - BANCO CREDICOP<br/>
+                        - BANCO HSBC<br/>
+                        - YPF<br/>
+                        - ARCOR<br/>
+                        - QUICK FOOD<br/>
+                        - PROSEGUR<br/>
+                        - AMERICAN EXPRESS<br/>
+                        - CHANGO MAS<br/>
+                        - BOSCH<br/>
+                        - UNIVERSIDAD FASTA<br/>
+                        - UNNOBA<br/>
+                        - SANCOR SEGUROS<br/>
+                        - ACINDAR<br/>
+                        - DURLOCK<br/>
+                        - MASTELLONE<br/>
+                        - ALDOSIVI<br/>
+                        - ALL BOYS<br/>
+                        - ARSENAL<br/>
+                        - ATLETICO TUCUMAN<br/>
+                        - BANFIELD<br/>
+                        - BELGRANO DE CORDOBA<br/>
+                        - BOCA JUNIORS<br/>
+                        - CRUCERO DEL NORTE<br/>
+                        - DEFENSA Y JUSTICIA<br/>
+                        - ESTUDIANTES DE SAN LUIS<br/>
+                        - GIMNASIA Y ESGRIMA DE JUJUY<br/>
+                        - GIMNASIA Y ESGRIMA LA PLATA<br/>
+                        - HURACAN<br/>
+                        - INDEPENDIENTE RIVADAVIA DE MENDOZA<br/>
+                        - INSTITUTO<br/>
+                        - NUEVA CHICAGO<br/>
+                        - OLIMPO<br/>
+                        - PATRONATO<br/>
+                        - RAFAELA<br/>
+                        - SAN MARTIN DE SAN JUAN<br/>
+                        - SARMIENTO<br/>
+                        - TALLERES DE CORDOBA<br/>
+                        - TEMPERLEY<br/>
+                        - MONTE HERMOSO<br/>
                         </p>
                     </div>
                 </div>
